--- a/Style.css
+++ b/Style.css
@@ -20,7 +20,7 @@ body {
   width: 650px;
   height: 450px;
   border-radius: 30px;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #ffffff;
   display: flex;
 }
@@ -210,4 +210,9 @@ body {
   .content{
     padding: 10px;
   }
+  .score{
+    width: 170px;
+    height:170px;
+    
+    
 }
